Fix mobile pagination visibility

--- a/.dev/sass/components/_menus.scss
+++ b/.dev/sass/components/_menus.scss
@@ -363,7 +363,7 @@ body.no-max-width .main-navigation {
 			float: right;
 
 			.page-numbers {
-				&:not(.prev, .next) {
+				&:not(.prev):not(.next) {
 					display: none;
 				}
 			}
